Custom Select - done

--- a/index.html
+++ b/index.html
@@ -30,37 +30,25 @@
                         <div class="contact__form-box">
                            <input class="contact__form-input" type="text" placeholder="Full Name*">
                            <input class="contact__form-input" type="text" placeholder="Title/Position*">
-                           <div class="select contact__form-input">
-                              <div class="select__header">
-                                 <span class="select__current">Practice / Institution*</span>
-                                 <div class="select__icon">
-                                    <img src="img/arrow.svg" alt="">
-                                 </div>
-                              </div>
-                              <div class="select__body">
-                                 <div class="select__item">Option 1</div>
-                                 <div class="select__item">Option 2</div>
-                                 <div class="select__item">Option 3</div>
-                                 <div class="select__item">Option 4</div>
-                                 <div class="select__item">Option 5</div>
-                              </div>
+                           <div class="select-wrapper">
+                              <select name="practice-institution">
+                                 <option value="0">Option 1</option>
+                                 <option value="1">Option 2</option>
+                                 <option value="2">Option 3</option>
+                                 <option value="3">Option 4</option>
+                                 <option value="4">Option 5</option>
+                              </select>
                            </div>
                            <input class="contact__form-input" type="email" placeholder="Email Address*">
                            <input class="contact__form-input" type="tel" placeholder="Phone Number*">
-                           <div class="select contact__form-input">
-                              <div class="select__header">
-                                 <span class="select__current">Medical Profession*</span>
-                                 <div class="select__icon">
-                                    <img src="img/arrow.svg" alt="">
-                                 </div>
-                              </div>
-                              <div class="select__body">
-                                 <div class="select__item">Option 1</div>
-                                 <div class="select__item">Option 2</div>
-                                 <div class="select__item">Option 3</div>
-                                 <div class="select__item">Option 4</div>
-                                 <div class="select__item">Option 5</div>
-                              </div>
+                           <div class="select-wrapper">
+                              <select name="medical-profession">
+                                 <option value="0">Option 1</option>
+                                 <option value="1">Option 2</option>
+                                 <option value="2">Option 3</option>
+                                 <option value="3">Option 4</option>
+                                 <option value="4">Option 5</option>
+                              </select>
                            </div>
                            <input class="contact__form-input contact__form-input--big" type="text" placeholder="Type of Inquiry*">
                         </div>
