--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
                         <button class="contact__form-btn">Send Message</button>
                      </form>
                   </div>
-                  <div class="contact__maps">
-                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20355.30850707758!2d30.628123350000003!3d50.37748865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1667664505514!5m2!1suk!2sua"
-                        width="470" height="936" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                  </div>
+                  <div id="map" class="contact__maps"></div>
                </div>
             </div>
          </section>
@@ -70,6 +65,7 @@
 
       </footer>
    </div>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDp4mypNUkiisiumY6NRcEiE0nOY9EuOO0&callback=initMap&libraries=places&v=weekly" async defer></script>
    <script src="js/app.js"></script>
 </body>
 
