--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                                  <option value="4">Option 5</option>
                               </select>
                            </div>
-                           <input class="contact__form-input contact__form-input--big" type="text" placeholder="Type of Inquiry*">
+                           <div class="select-wrapper contact__form-input--big">
+                              <select name="type-inquiry">
+                                 <option value="0">Option 1</option>
+                                 <option value="1">Option 2</option>
+                                 <option value="2">Option 3</option>
+                                 <option value="3">Option 4</option>
+                                 <option value="4">Option 5</option>
+                              </select>
+                           </div>
                         </div>
                         <textarea class="contact__form-input contact__form-text" name="text" placeholder="Enter Message*"></textarea>
                         <button class="contact__form-btn">Send Message</button>
