--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       </footer>
    </div>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDp4mypNUkiisiumY6NRcEiE0nOY9EuOO0&callback=initMap&libraries=places&v=weekly" async defer></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDp4mypNUkiisiumY6NRcEiE0nOY9EuOO0&callback=initMap&libraries=places&v=weekly" defer></script>
    <script src="js/app.js"></script>
 </body>
 
